# clipCollector

./: README
build-myQtProject-Clone_of_Desktop_Qt_5_12_6_clang_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  myQtProject  myQtProject.cbp  text.txt
build-myQtProject-Clone_of_Desktop_Qt_5_12_6_clang_64bit-Debug/.cmake/api/v1/reply/: cache-v2-22531e52f806a051c6ee.json  cmakeFiles-v1-ba31cbf74cf1a13b903d.json  codemodel-v2-3938f87785fe6b42c484.json  index-2020-03-14T11-13-17-0142.json  target-myQtProject-Debug-ad2a6832390b6e4cea4d.json
build-qtwb-11-1-Clone_of_Desktop_Qt_5_12_6_clang_64bit-Debug/: Makefile  moc_dialog.cpp  moc_equation.cpp  ui_dialog.h
build-qtwb-11-1-Clone_of_Desktop_Qt_5_12_6_clang_64bit-Debug/qtwb-11-1.app/Contents/: Info.plist
build-qtwb-11-1-Clone_of_Desktop_Qt_5_12_6_clang_64bit-Debug/qtwb-11-1.app/Contents/MacOS/: qtwb-11-1
build-qtwb-11-3-Clone_of_Desktop_Qt_5_12_6_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  qrc_resources.cpp  ui_mainwindow.h
build-qtwb-11-3-Clone_of_Desktop_Qt_5_12_6_clang_64bit-Debug/qtwb-11-3.app/Contents/: Info.plist
build-qtwb-11-3-Clone_of_Desktop_Qt_5_12_6_clang_64bit-Debug/qtwb-11-3.app/Contents/MacOS/: qtwb-11-3
myQtProject/: CMakeLists.txt  main.cpp  templateimplemetation.cpp  templateimplemetation.h
